terraform-project/vpc.tf
resource "aws_vpc" "my_vpc" {
  cidr_block = var.vpc-cidr
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    Name = var.vpc-name
  }
}
